@@ -10,6 +10,8 @@ Imager release history.  Older releases can be found in Changes.old
 
  - added some important types to Imager::APIRef
 
+ - added test_image_double() to Imager::Test
+
 Imager 0.60 - 30 August 2007
 ===========
 
